fix(data-grid): fix sticky header of dark mode (#40)

--- a/projects/extensions/data-grid/_grid-theme.scss
+++ b/projects/extensions/data-grid/_grid-theme.scss
@@ -100,4 +100,9 @@
   }
 
   @include mat-column-resize-color($theme);
+
+  // Fix sticky header of dark mode: https://github.com/ng-matero/extensions/issues/40
+  .mat-table-sticky {
+    position: sticky;
+  }
 }
